; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Tracking.c_GetCallStackSymbolInfo.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Tracking.c_GetCallStackSymbolInfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cs_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetCallStackSymbolInfo(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %16

8:                                                ; preds = %1
  %9 = load i32, i32* @cs_lock, align 4
  %10 = call i32 @OSLock(i32 %9)
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @OSGetCallStackSymbolInfo(i32* %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* @cs_lock, align 4
  %14 = call i32 @OSUnlock(i32 %13)
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %8, %7
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @OSLock(i32) #1

declare dso_local i32 @OSGetCallStackSymbolInfo(i32*) #1

declare dso_local i32 @OSUnlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
